[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Player.gd" type="Script" id=1]
[ext_resource path="res://Objects/StayPerimeter.gd" type="Script" id=2]
[ext_resource path="res://Objects/NearPerimeter.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player_Animations.tres" type="SpriteFrames" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.13295, 6.12506 )

[sub_resource type="CircleShape2D" id=3]
radius = 50.564

[sub_resource type="CircleShape2D" id=4]
radius = 16.6596

[node name="Player" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerFollower" type="PathFollow2D" parent="."]
loop = false
lookahead = 6.0

[node name="PlayerArea2D" type="Area2D" parent="PlayerFollower"]
editor/display_folded = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFollower/PlayerArea2D"]
position = Vector2( 0.0472939, -0.00424016 )
shape = SubResource( 2 )

[node name="StayPerimeter" type="Area2D" parent="PlayerFollower"]
editor/display_folded = true
rotation = 1.5708
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFollower/StayPerimeter"]
shape = SubResource( 3 )

[node name="NearPerimeter" type="Area2D" parent="PlayerFollower"]
editor/display_folded = true
rotation = 1.5708
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFollower/NearPerimeter"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerFollower"]
editor/display_folded = true
rotation = 1.5708
frames = ExtResource( 4 )
animation = "Idle"
playing = true
offset = Vector2( -0.200444, -1.83467 )
__meta__ = {
"_edit_group_": true
}

[node name="FacingNode" type="Node2D" parent="PlayerFollower/AnimatedSprite"]
position = Vector2( 0, -1 )
rotation = -0.265986

[node name="Line2D" type="Line2D" parent="PlayerFollower/AnimatedSprite"]
position = Vector2( 0.0159715, 0 )
scale = Vector2( 0.4, 1 )
points = PoolVector2Array( 0, 0, 0, -25 )
width = 1.0
default_color = Color( 1, 0.4, 0.52549, 1 )

[node name="Camera2D" type="Camera2D" parent="PlayerFollower"]
visible = false
position = Vector2( 0.0242573, 0.0230256 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="InteractionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="MiningTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="PlayerFollower/PlayerArea2D" to="." method="_on_PlayerArea2D_area_entered"]
[connection signal="area_exited" from="PlayerFollower/PlayerArea2D" to="." method="_on_PlayerArea2D_area_exited"]
[connection signal="timeout" from="InteractionTimer" to="PlayerFollower" method="_on_InteractionTimer_timeout"]
[connection signal="timeout" from="MiningTimer" to="." method="_on_MiningTimer_timeout"]
